# Win-CodexBar

./: .gitattributes  .gitignore  README.md  VERSIONING.md  install.ps1
installer/: codexbar.iss
rust/: CHANGELOG.md  Cargo.toml  README.md  build.rs  tauri.conf.json
rust/src/: cost_scanner.rs  login.rs  main.rs  notifications.rs  settings.rs  shortcuts.rs  single_instance.rs  sound.rs  updater.rs
rust/src/browser/: cookie_cache.rs  cookies.rs  detection.rs  mod.rs  watchdog.rs
rust/src/cli/: account.rs  autostart.rs  config.rs  cost.rs  mod.rs  tty_runner.rs  usage.rs
rust/src/core/: cost_pricing.rs  fetch_plan.rs  jsonl_scanner.rs  mod.rs  openai_dashboard.rs  provider.rs  session_quota.rs  token_accounts.rs  usage_pace.rs  widget_snapshot.rs
rust/src/native_ui/: app.rs  charts.rs  mod.rs  preferences.rs  provider_icons.rs  theme.rs
rust/src/providers/: mod.rs
rust/src/providers/amp/: mod.rs
rust/src/providers/antigravity/: mod.rs
rust/src/providers/augment/: keepalive.rs  mod.rs
rust/src/providers/copilot/: api.rs  device_flow.rs  mod.rs
rust/src/providers/jetbrains/: mod.rs
rust/src/providers/kimi/: mod.rs
rust/src/providers/minimax/: local_storage.rs  mod.rs
rust/src/providers/openai/: friendly_errors.rs  mod.rs  scraper.rs
rust/src/providers/opencode/: mod.rs
rust/src/providers/synthetic/: mod.rs
rust/src/providers/vertexai/: mod.rs  token_refresher.rs
rust/src/providers/zai/: mcp_details.rs  mod.rs
rust/src/status/: indicators.rs  mod.rs
rust/src/tray/: icon.rs  manager.rs  menu_invalidation.rs  mod.rs  weekly_indicator.rs
